# coderun-2025

chicken-invaders-sdl3/: CMakeLists.txt  main.cpp
gamedev/: CMakeLists.txt  main.cpp
gamedev/game/: circle.cpp  main.cpp
web-django/: db.sqlite3
web-django/mainApp/: asgi.py  settings.py  urls.py  wsgi.py
web-django/pirateApp/: admin.py  apps.py  models.py  oracle_client.py  urls.py  views.py
web-django/pirateApp/migrations/: 0001_initial.py  0002_delete_instruction.py  0003_passwordguess.py  0004_rename_distance_nm_huntinstruction_distance_m_and_more.py
web-django/pirateApp/templates/pirateApp/: compass.html  treasure.html
web-js/: README.md  package.json  pnpm-workspace.yaml
web-js/backend/: package.json
web-js/backend/src/: server.js
web-js/backend/src/rle/: compress.js  decompress.js  segment.js
web-js/backend/src/utils/: cors.js  json.js
web-js/frontend/src/: App.jsx  styles.css
web-js/frontend/src/components/: Controls.jsx  FileDropZone.jsx  Metrics.jsx  StatusBar.jsx  TextAreas.jsx
web-js/frontend/src/services/: api.js
